--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^14.2.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-spring": "^9.7.3",
     "zod": "^3.23.3"
   },
   "devDependencies": {
